<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:paddingLeft="16dp"
  android:paddingRight="16dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:weightSum="1">
  <LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.50">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:typeface="sans"
      android:textSize="50sp"
      android:textColor="@android:color/holo_red_dark"
      android:text="@string/shutuptitle"
      android:id="@+id/ShutUPText"/>
  </LinearLayout>
  <LinearLayout
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:id="@+id/host_label"
      android:text="@string/host_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/abc_action_bar_default_padding_end_material"
      android:textSize="@dimen/abc_text_size_large_material"/>
    <EditText
      android:id="@+id/host_value"
      android:text="@string/host_value"
      android:padding="@dimen/abc_action_bar_content_inset_material"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"/>
  </LinearLayout>
  <LinearLayout
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:id="@+id/name_label"
      android:text="@string/name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="@dimen/abc_action_bar_default_padding_end_material"
      android:textSize="@dimen/abc_text_size_large_material"/>
    <EditText
      android:id="@+id/name_value"
      android:hint="@string/name_label"
      android:padding="@dimen/abc_action_bar_content_inset_material"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"/>
  </LinearLayout>
  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/join_button"
    android:id="@+id/join_button"
    android:onClick="clientConnect"
    android:layout_marginTop="@dimen/abc_action_bar_default_height_material"/>
</LinearLayout>

